[GStreamer] Misc fixes in video encoder/decoder probing support https://bugs.webkit.org/show_bug.cgi?id=249995

Reviewed by Xabier Rodriguez-Calvar.

When multiple elements were able to support the given format only the first matching element factory
was stored in the lookup result. We also now ignore the vpxalphadecodebin wrapper elements when
probing vpx decoding capabilities. Those elements are meant to be used by decodebin and won't
negotiate input non-alpha caps.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::ElementFactories::hasElementForMediaType const):
(WebCore::GStreamerRegistryScanner::initializeDecoders):

Canonical link: https://commits.webkit.org/258657@main